--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Vero Tech</title>
+  <title>Stiffcon Engineering</title>
   <link type="text/css" href="./vendor/bulma/dist/css/bulma.min.css" rel="stylesheet">
   <!-- <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet"> -->
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -290,8 +290,8 @@
   <div class="safety-section-0 mt-6 pt-6">
     <div class="after"></div>
     <div class="is-flex is-justify-content-center is-align-items-center" style="height: 100%;">
-      <div class="has-text-light title-big">
-        <h1 class="display is-size-1 has-text-shadow has-text-white">Safety Comes First</h1>
+      <div class="has-text-light title-big p-5">
+        <h1 class="display is-size-1 has-text-shadow has-text-white" style="line-height: 1.1;">Safety Comes First</h1>
         <a class="has-text-light has-text-weight-light is-size-4">
           <span class="underline has-text-white">Learn More about our safety procedures <span class="has-text-white"> ></span></span>
         </a>
@@ -422,7 +422,7 @@
             </div>
           </div>
           <div class="column">
-            <div class="py-5">
+            <div class="py-5 is-hidden-mobile">
               <h1 class="display is-size-1 has-text-weight-light has-text-light">
                 _
               </h1>
